--- a/public/css/style.css
+++ b/public/css/style.css
@@ -207,7 +207,8 @@ a:focus,
   display: table;
   width: 100%;
   padding: 0;
-  background: url(../img/intro-bg.jpg) center center no-repeat;
+  background-image: url(../img/header/bg_image.png);
+
   background-color: #e5e5e5;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -215,32 +216,44 @@ a:focus,
   -o-background-size: cover;
 }
 .intro .overlay {
-  background: rgba(0, 0, 0, 0.2);
+  background-image: linear-gradient(
+    0.87deg,
+    rgba(2, 55, 135, 0.9) 0.69%,
+    rgba(81, 38, 174, 0.4736) 100.48%,
+    rgba(38, 92, 174, 0.0102906) 100.49%,
+    rgba(195, 195, 196, 0.00520833) 100.5%,
+    #76a6ef 100.51%
+  );
 }
 .intro h1 {
   font-family: "Raleway", sans-serif;
   color: #fff;
-  font-size: 56px;
+  font-size: 60px;
   font-weight: 700;
-  text-transform: uppercase;
   margin-top: 0;
   margin-bottom: 10px;
+  margin-top: 20px;
 }
 .intro h1 span {
   font-weight: 800;
   color: #5ca9fb;
 }
-.intro p {
+.header-logo {
+  height: 241px;
+  width: 380px;
+}
+.intro h3 {
+  font-family: "Raleway", sans-serif;
   color: #fff;
-  font-size: 22px;
-  font-weight: 300;
-  line-height: 30px;
-  margin: 0 auto;
-  margin-bottom: 60px;
+  font-size: 45px;
+  font-weight: 500;
+  margin-top: 0;
+  margin-bottom: 10px;
+  margin-top: 20px;
 }
 header .intro-text {
-  padding-top: 350px;
-  padding-bottom: 200px;
+  padding-top: 100px;
+  padding-bottom: 100px;
   text-align: center;
 }
 /* Features Section */
@@ -260,9 +273,36 @@ header .intro-text {
   background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
 }
+/* social section */
+.social-new {
+  background-color: #ffdede;
+  /* margin-top: 40vh; */
+  padding: 10rem;
+  max-height: 500px;
+  width: 100%;
+}
+.social-new-div {
+  position: absolute;
+  min-height: 400px;
+  max-height: 400px;
+}
+.social-new-button {
+  margin: 1rem auto auto auto;
+}
+.social-new-button button {
+  width: 200px;
+  min-height: 100px;
+  max-height: 200px;
+}
+.social-new-button img {
+  height: auto;
+  width: 100%;
+}
+
 /* About Section */
 #about {
-  padding: 100px 0;
+  padding: 200px auto 0 auto;
+  max-height: 100vh !important;
 }
 #about h3 {
   font-size: 22px;
@@ -298,14 +338,22 @@ header .intro-text {
 }
 #about img {
   width: 520px;
-  margin-top: 17%;
   background: #fff;
   border-right: 0;
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.06);
 }
 #about p {
   line-height: 24px;
-  margin: 30px 0;
+}
+.about-main-back {
+  position: relative;
+  width: 477px;
+  height: 431px;
+}
+.about-main {
+  width: 425px;
+  height: 555px;
+  left: 5vw;
 }
 /* Services Section */
 #services {
@@ -404,6 +452,10 @@ div#features.text-center {
 .hover-bg:hover .hover-text {
   opacity: 1;
 }
+.gallery-image {
+  min-height: 400px;
+  max-height: 400px;
+}
 /* Testimonials Section */
 #testimonials {
   padding: 100px 0;
@@ -448,19 +500,59 @@ div#features.text-center {
 #team {
   padding: 100px 0;
 }
+.team-container {
+  padding: 0 !important;
+}
 #team h4 {
   margin: 5px 0;
 }
 #team .team-img {
-  width: 240px;
+  width: 100%;
+  min-height: 300px;
+  max-height: 300px;
 }
 #team .thumbnail {
   background: transparent;
   border: 0;
 }
-#team .thumbnail .caption {
-  padding: 10px 0 0 0;
+.thumbnail {
+  padding: 0 !important;
+}
+#team .thumbnail {
   color: #888;
+}
+.caption {
+  display: flex;
+  font-weight: bold;
+  font-size: 10px;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 30px 10px 30px 10px !important;
+  min-height: 80px;
+  max-height: 80px;
+}
+.caption:hover {
+  background-color: #db1f21;
+}
+.caption:hover svg {
+  background-color: white;
+}
+.caption p {
+  margin-left: 20px;
+  margin-bottom: 0 !important;
+}
+.caption svg {
+  border-radius: 100%;
+  background-color: #db1f21;
+  color: black;
+  width: 10%;
+  height: 25px;
+}
+.team {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin: auto 15px auto 15px;
+  padding: 0 !important;
+  max-width: 360px !important;
 }
 /* Contact Section */
 #contact {
@@ -590,8 +682,8 @@ label {
 }
 /* Footer Section*/
 #footer {
-  background: #f6f6f6;
-  padding: 30px 0;
+  background-color: #ff797b;
+  padding: 30px;
 }
 #footer p {
   color: #888;
@@ -602,6 +694,35 @@ label {
 }
 #footer a:hover {
   border-bottom: 2px solid #608dfd;
+}
+.footer {
+}
+.footer-links {
+  padding: 2rem;
+  display: flex;
+  justify-content: space-around;
+}
+.footer-links > a {
+  color: black;
+  text-decoration: none;
+}
+.horizontal-line {
+  border-bottom: 2px solid black;
+}
+.furthur-content {
+  display: flex;
+  flex-direction: column;
+}
+.footer-country {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+.footer-city {
+  display: flex;
+  justify-content: flex-start;
+}
+.footer-city span {
+  margin: 2px 15px 2px 15px;
 }
 
 @media (max-width: 768px) {
@@ -618,7 +739,7 @@ label {
 }
 @media (max-width: 500px) {
   header .intro-text {
-    padding-top: 200px !important;
+    padding-top: 100px !important;
     padding-bottom: 100px !important;
   }
   .intro h1 {
