--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden !important;
+  /* overflow-x: hidden !important; */
   background-color: #e5e5e5;
-  max-width: 100%;
-  min-width: 100%;
+  /* max-width: 100%;
+  min-width: 100%; */
 }
 
 code {
